5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1592_1806.log
== TEST (2019-04-01 14:13:18) 
-- CODE:
n= int(input("numero de pessoas: "))
from math import * 

p= 1 - ((365 !) / (365 - n)) ! * (1 / (365 ** n)) 

print(round(p , 2))

-- ERROR:
File "XXXX", line 4
    p= 1 - ((365 !) / (365 - n)) ! * (1 / (365 ** n)) 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:32) 
-- CODE:
n= int(input("numero de pessoas: "))

from math import * 

p= 1 - (factorial(365) / factorial (365 - n)) * (1 / (365 ** n)) 

print(round(p , 2))

-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:52) 
-- CODE:
n= float(input("numero de pessoas: "))

from math import * 

p= 1 - (factorial(365) / factorial (365 - n)) * (1 / (365 ** n)) 

print(round(p , 2))

-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:15:59) 
-- CODE:
n= float(input("numero de pessoas: "))

from math import * 

p= 1 - (factorial(365) / factorial (365 - n)) * (1 / (365 ** n)) 
v= p * 100

print(round(v , 2))

-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:16:13) 
-- CODE:
n= float(input("numero de pessoas: "))

from math import * 

p= 1 - (factorial(365) / factorial (365 - n)) * (1 / (365 ** n)) 
v= p * 100

print(round(v , 2))

-- EXECUTION TIME:
0.188888
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
